--- a/app/views/urls/_form.html.erb
+++ b/app/views/urls/_form.html.erb
@@ -1,4 +1,4 @@
 <%= form_for @url do |f| %>
-  <%= f.text_field :long, :placeholder => "Long URL" %>
+  <%= f.text_field :long, :placeholder => "Long URL (Start with 'http://')" %>
   <%= f.submit "Generate" %>
 <% end %>
